rest/rest-service.yaml
##
## You provide this
##
apiVersion: v1
kind: Service
metadata:
    name: rest-frontend
    labels:
        app: rest-frontend
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 5001
  selector:
    app: rest-frontend
