rest/rest-ingress.yaml
##
## You provide this
##
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: rest-frontend
          servicePort: 5001
